runs/2025-02-28-13-08-23/logs/deconvR/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'deconvR'
also installing the dependencies ‘robslopes’, ‘fastseg’, ‘deming’, ‘mcr’, ‘methylKit’, ‘rsq’, ‘granulator’

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/robslopes_1.1.3.tar.gz'
Content type 'binary/octet-stream' length 188813 bytes (184 KB)
==================================================
downloaded 184 KB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/fastseg_1.52.0.tar.gz'
Content type 'application/x-gzip' length 737084 bytes (719 KB)
==================================================
downloaded 719 KB

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/deming_1.4-1.tar.gz'
Content type 'binary/octet-stream' length 268372 bytes (262 KB)
==================================================
downloaded 262 KB

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/mcr_1.3.3.1.tar.gz'
Content type 'binary/octet-stream' length 629225 bytes (614 KB)
==================================================
downloaded 614 KB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/methylKit_1.32.0.tar.gz'
Content type 'application/x-gzip' length 1408002 bytes (1.3 MB)
==================================================
downloaded 1.3 MB

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/rsq_2.7.tar.gz'
Content type 'binary/octet-stream' length 100542 bytes (98 KB)
==================================================
downloaded 98 KB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/granulator_1.14.0.tar.gz'
Content type 'application/x-gzip' length 1356334 bytes (1.3 MB)
==================================================
downloaded 1.3 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/deconvR_1.12.0.tar.gz'
Content type 'application/x-gzip' length 3974909 bytes (3.8 MB)
==================================================
downloaded 3.8 MB

* installing *binary* package ‘robslopes’ ...
* ‘robslopes’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘robslopes’ as ‘robslopes_1.1.3_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (robslopes)
* installing *source* package ‘fastseg’ ...
** package ‘fastseg’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c R_init_fastseg.c -o R_init_fastseg.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c segment.cpp -o segment.o
In file included from segment.cpp:8:
segment.cpp: In function ‘SEXPREC* segment(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP)’:
segment.cpp:43:25: error: ‘allocVector’ was not declared in this scope; did you mean ‘Rf_allocVector’?
   43 |         PROTECT(x_RET = allocVector(REALSXP, n));
      |                         ^~~~~~~~~~~
/usr/local/lib/R/include/Rinternals.h:371:36: note: in definition of macro ‘PROTECT’
  371 | #define PROTECT(s)      Rf_protect(s)
      |                                    ^
segment.cpp:292:37: error: ‘mkChar’ was not declared in this scope
  292 |         SET_STRING_ELT(namesRET, 0, mkChar("x"));
      |                                     ^~~~~~
segment.cpp:303:9: error: ‘setAttrib’ was not declared in this scope; did you mean ‘Rf_setAttrib’?
  303 |         setAttrib(RET, R_NamesSymbol, namesRET);
      |         ^~~~~~~~~
      |         Rf_setAttrib
make: *** [/usr/local/lib/R/etc/Makeconf:204: segment.o] Error 1
ERROR: compilation failed for package ‘fastseg’
* removing ‘/mnt/library/fastseg’
* installing *binary* package ‘deming’ ...
* ‘deming’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘deming’ as ‘deming_1.4-1_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (deming)
* installing *source* package ‘granulator’ ...
** package ‘granulator’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘granulator’ as ‘granulator_1.14.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (granulator)
* installing *binary* package ‘mcr’ ...
* ‘mcr’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘mcr’ as ‘mcr_1.3.3.1_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (mcr)
ERROR: dependency ‘fastseg’ is not available for package ‘methylKit’
* removing ‘/mnt/library/methylKit’
* installing *binary* package ‘rsq’ ...
* ‘rsq’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘rsq’ as ‘rsq_2.7_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (rsq)
ERROR: dependency ‘methylKit’ is not available for package ‘deconvR’
* removing ‘/mnt/library/deconvR’

The downloaded source packages are in
	‘/tmp/Rtmpmt33cM/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning messages:
1: In install.packages(...) :
  installation of package ‘fastseg’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘methylKit’ had non-zero exit status
3: In install.packages(...) :
  installation of package ‘deconvR’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	2m40.562s
user	0m21.195s
sys	0m7.894s
